--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.0.5",
     "prettier-standard": "^8.0.1"
+  },
+  "lint-staged": {
+    "linters": {
+      "*.js": [
+        "prettier-standard",
+        "git add"
+      ]
+    }
   }
 }
