fix build issue

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "backpack build",
     "start": "node ./build/main.js",
     "deploy": "git push heroku master",
-    "heroku-postbuild": "npm run build",
+    "postinstall": "npm run build",
     "precommit": "lint-staged"
   },
   "dependencies": {
     "dotenv": "^5.0.1",
     "eth-dagger": "^0.0.1-beta.3",
     "lodash.sample": "^4.2.1",
+    "source-map-support": "^0.5.5",
     "twitter": "^1.7.1",
     "web3": "^1.0.0-beta.34",
     "winston": "^3.0.0-rc5"
