--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "source-map-support": "^0.5.5",
     "twitter": "^1.7.1",
     "web3": "^1.0.0-beta.34",
-    "winston": "^3.0.0-rc5"
+    "winston": "^3.0.0-rc5",
+    "winston-papertrail": "^1.0.5"
   },
   "devDependencies": {
     "backpack-core": "^0.7.0",
