--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nashcash-chip-claim-twitter-bot",
+  "name": "twitter-bot",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
